Fixed the gap between the heading and the user profile card in the profile page.

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -17,7 +17,7 @@
             color: $color-primary-contrast;
             font-size: 3rem;
             font-weight: 500;
-            margin-bottom: $margin-bottom-xs;
+            margin-bottom: $margin-bottom-s;
             position: relative;
             width: 100%;
             fa-icon {
